Fixed overflow in pre tags

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,6 +110,7 @@ code, .gist {
 }
 pre {
 	padding: 0px 10px;
+	overflow: auto;
 }
 blockquote {
 	font-style: italic;
